--- a/src/layouts/styles.module.css
+++ b/src/layouts/styles.module.css
@@ -1,4 +1,5 @@
 .layout {
     margin-top: 5.1rem;
     margin-bottom: 5.5rem;
+    overflow: hidden;
 }
